feat(support): implement RF11 message visibility
