# src/features/ticket/adapters/controllers/dtos/update-message-visibility-path.dto.ts
@@ -1,0 +1,9 @@
+import { IsUUID } from 'class-validator';
+
+export default class UpdateMessageVisibilityPathDTO {
+	@IsUUID('4')
+	ticketId!: string;
+
+	@IsUUID('4')
+	messageId!: string;
+}
